--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,22 +11,40 @@ ul {
   list-style-type: none;
 }
 
+.grey {
+  background-color: #595c59 !important;
+}
+
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  margin: 5rem;
+  margin-bottom: 2rem;
+  border-bottom: 0.1rem solid #595c595d;
 }
 
-/* .header__title {
-    
-} 
+.header__title {
+  color: #7f03fc;
+  font-size: 4rem;
+  font-weight: 900;
+}
 
- .header__search {
-    
-} */
+.header__search {
+  width: 100%;
+  border: 0.15rem solid;
+  border-radius: 0.3rem;
+  opacity: 0.2;
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+}
 
-/* .header__nav--link {
-    
-}  */
+.header__nav--link {
+  color: white;
+  border-radius: 0.3rem;
+  background-color: #7f03fc;
+  font-size: 1.5rem;
+  padding: 0.6rem;
+  margin: 1rem;
+  width: 100%;
+}
