--- a/src/components/questionlist/QuestionList.css
+++ b/src/components/questionlist/QuestionList.css
@@ -3,6 +3,6 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
     border-radius: 0.625rem;
-    margin: 0.75rem;
+    margin: 3rem 2rem;
     box-shadow: 0.25rem 0.25rem 0.5rem #00000069;
   }
