--- a/src/components/questionlist/Question.css
+++ b/src/components/questionlist/Question.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap");
-
 .question-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -55,17 +53,15 @@
 .topic-layout {
   font-family: "Poppins";
   grid-area: topic;
-  font-style: italic
+  font-style: italic;
 }
 
-@media (min-width: 50rem){
+@media (min-width: 50rem) {
   .question-grid {
     grid-template-columns: 1fr 10rem;
     grid-template-rows: 3rem, 1fr;
     grid-template-areas:
-    "title isanswered"
-    "summary topic";
-
+      "title isanswered"
+      "summary topic";
   }
-
 }
