--- a/src/components/answerList/Answer.css
+++ b/src/components/answerList/Answer.css
@@ -1,32 +1,41 @@
 .answer-container {
-    display: grid;
-    grid-template-areas: 
+  display: grid;
+  grid-template-areas:
     "title solution"
     "body body"
     "date date";
-    background: #ffffff;
-    padding: 0 2rem 1rem 2rem;
-    margin: 3rem 2rem;
-    box-shadow: 0.25rem 0.25rem 0.5rem #0000002c;
-    list-style: none;
-    text-align: left;
+  color: #68628c;
+  background: #ffffff;
+  padding: 0 2rem 1rem 2rem;
+  margin: 3rem 2rem;
+  box-shadow: 0.25rem 0.25rem 0.5rem #0000002c;
+  list-style: none;
+  text-align: left;
 }
 
 .answer-title {
-    grid-area: title;
+  grid-area: title;
 }
 
 .answer-body {
-    grid-area: body;
+  grid-area: body;
 }
 
 .answer-solution {
-    grid-area: solution;
-    text-align: right;
-    padding-top: 1rem;
+  grid-area: solution;
+  text-align: right;
+  justify-self: end;
+  align-self: center;
+  padding: 0.25rem;
+  border: solid;
+  color: white;
+  border-color: #20bd59;
+  background: #20bd59;
+  border-radius: 0.3rem;
 }
 
 .answer-date {
-    grid-area: date;
-    text-align: right;
+  grid-area: date;
+  text-align: right;
+  font-size: 0.8rem;
 }
