Remove placeholders from header

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 .header-grid {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 2fr 1fr;
   grid-gap: 1rem;
   border-bottom: 0.1rem solid #595c595d;
 }
