--- a/src/components/questionlist/Question.css
+++ b/src/components/questionlist/Question.css
@@ -16,15 +16,13 @@
 }
 
 .solved-format {
-  border: solid;
-  color: white;
-  border-color: #20bd59;
-  background: #20bd59;
+  color: #20bd59;
   border-radius: 0.3rem;
   padding: 0.25rem;
   width: fit-content;
   justify-self: end;
   align-self: center;
+  font-weight: 900;
 }
 
 .answer-format {
@@ -34,14 +32,13 @@
 }
 
 .not-answered-format {
-  border: solid;
   color: #ff5555;
-  border-color: #ff5555;
   background: white;
   border-radius: 0.3rem;
   padding: 0.25rem;
   width: fit-content;
   align-self: center;
+  font-weight: 900;
 }
 
 .summary-format {
