--- a/src/components/askquestion/AskQuestion.css
+++ b/src/components/askquestion/AskQuestion.css
@@ -44,7 +44,7 @@
   width: fit-content;
   font-weight: 900;
   color: #20bd59;
-  background-color: white;
+  background-color: #dfdfdf;
   border-color: #20bd59 !important;
   border: 0.15rem solid;
   border-radius: 0.2rem;
@@ -57,8 +57,8 @@
 
 .button-format:hover {
   text-shadow: 0.25rem 0.25rem 0.5rem #00000069;
+  color: #68628c;
   background-color: #dfdfdf;
   font-size: 1.5rem;
-  font-style: italic;
   cursor: pointer;
 }
